fix(decode): make ListDecoder.toSet() preserve insertion order (#69)
toSet() is documented as preserving insertion order, but Set.copyOf() returns a
set with unspecified iteration order, discarding the LinkedHashSet ordering it
was built from. Return Collections.unmodifiableSet(new LinkedHashSet<>(list)) so
the documented contract actually holds, and assert the order in the test.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>